--- a/app/src/main/res/layout/activity_spotfind_result.xml
+++ b/app/src/main/res/layout/activity_spotfind_result.xml
@@ -6,26 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".SpotfindResult">
 
+
     <ImageView
         android:id="@+id/img_v_result_spotimg"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="46dp"
-        android:layout_marginBottom="73dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginBottom="31dp"
         app:layout_constraintBottom_toTopOf="@+id/txt_v_result_spotname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_launcher_background" />
 
+    <Button
+        android:id="@+id/btn_search_youtube"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="13dp"
+        android:text="관광지 정보 유튜브로 확인하기"
+        app:layout_constraintBottom_toTopOf="@+id/btn_search_map"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_v_result_location" />
 
     <TextView
         android:id="@+id/txt_v_result_spotname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="32dp"
         android:text="관광지명 : XXXXXX"
         android:textSize="24dp"
         app:layout_constraintBottom_toTopOf="@+id/txt_v_result_location"
@@ -37,7 +48,7 @@
         android:id="@+id/txt_v_result_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="45dp"
+        android:layout_marginBottom="33dp"
         android:text="위치 : XXXXXX"
         android:textSize="24dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_search_youtube"
@@ -45,14 +56,14 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_v_result_spotname" />
 
     <Button
-        android:id="@+id/btn_search_youtube"
+        android:id="@+id/btn_search_map"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="관광지 정보 유튜브로 확인하기"
+        android:text="관광지 위치 지도로 확인하기"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_v_result_location" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_search_youtube" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
